# omnish

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml
config/: README.md  client.toml  daemon.toml  default.toml  example-openai.toml
crates/omnish-client/: Cargo.toml
crates/omnish-client/src/: chat_session.rs  client_plugin.rs  command.rs  commands.rs  completion.rs  debug_log.rs  display.rs  event_log.rs  ghost_complete.rs  i18n.rs  interceptor.rs  main.rs  markdown.rs  onboarding.rs  pending_notices.rs  picker.rs  probe.rs  proctitle.rs  project_instructions.rs  screen_capture.rs  shell_hook.rs  shell_input.rs  throttle.rs  util.rs
crates/omnish-client/src/i18n/: ar.json  en.json  es.json  fr.json  ja.json  ko.json  zh-tw.json  zh.json
crates/omnish-client/src/widgets/: chat_layout.rs  common.rs  inline_notice.rs  line_editor.rs  line_status.rs  menu.rs  mod.rs  picker.rs  scroll_view.rs  text_view.rs
crates/omnish-common/: Cargo.toml  build.rs
crates/omnish-common/src/: auth.rs  config.rs  config_edit.rs  lib.rs  plugin_bundle.rs  sandbox_rule.rs  update.rs
crates/omnish-common/tests/: config_test.rs
crates/omnish-context/: Cargo.toml
crates/omnish-context/src/: format_utils.rs  lib.rs  recent.rs
crates/omnish-daemon/: Cargo.toml
crates/omnish-daemon/src/: auto_update.rs  cleanup.rs  clients_history.rs  command_tracker.rs  config_schema.rs  config_schema.toml  config_watcher.rs  conversation_mgr.rs  daily_notes.rs  deploy.rs  disconnect_sweep.rs  event_detector.rs  eviction.rs  file_watcher.rs  formatter.rs  formatter_mgr.rs  hourly_summary.rs  house_keeping.rs  lib.rs  main.rs  plugin.rs  plugin_bundle.rs  plugin_bundle_task.rs  plugin_install.rs  prompt_detector.rs  sandbox_rules.rs  server.rs  session_mgr.rs  task_mgr.rs  thread_summary.rs  tool_registry.rs  update_cache.rs  writer_idle.rs
crates/omnish-daemon/src/tools/: bash.rs  command_query.rs  mod.rs  read.rs
crates/omnish-daemon/tests/: chat_cache_hints_test.rs  daemon_test.rs  smoke_test.rs
crates/omnish-llm/: Cargo.toml
crates/omnish-llm/assets/: chat.json  chat.override.json.example  model_presets.json
crates/omnish-llm/src/: anthropic.rs  backend.rs  context.rs  factory.rs  langfuse.rs  lib.rs  message_log.rs  (+5 more)
crates/omnish-plugin/: Cargo.toml
crates/omnish-plugin/assets/: tool.json
crates/omnish-plugin/plugins/builtin/: tool.json  tool.override.json.example
crates/omnish-plugin/src/: formatter.rs  lib.rs  main.rs
crates/omnish-plugin/src/sandbox/: bwrap.rs  landlock.rs  mod.rs  seatbelt.rs
crates/omnish-plugin/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
crates/omnish-protocol/: Cargo.toml
crates/omnish-pty/: Cargo.toml
crates/omnish-store/: Cargo.toml
crates/omnish-tracker/: Cargo.toml
crates/omnish-transport/: Cargo.toml
crates/omnish-transport/src/: .traits.rs.swp  .unix.rs.swp  lib.rs  rpc_client.rs  rpc_server.rs  tls.rs  traits.rs  unix.rs
crates/omnish-transport/tests/: unix_test.rs
docs/implementation/: README.md  check_doc_updates.sh  how_to_update_docs.md  how_to_update_index.md  index.md  omnish-client.md  omnish-common.md  omnish-context.md  omnish-daemon.md  omnish-llm.md  omnish-protocol.md  omnish-pty.md  omnish-store.md  omnish-tracker.md  omnish-transport.md  overview.md  shell-prompt-state-tracking.md  split_doc_sections.sh
docs/plans/: 2026-02-11-omnish-design.md  2026-02-13-command-recording.md  2026-02-13-multi-session-command-association-design.md  2026-02-14-debug-command-design.md  2026-02-15-context-strategy.md  2026-02-16-context-refactor.md  2026-02-17-rpc-transport-design.md  2026-02-17-rpc-transport-plan.md  2026-02-18-reconnection-design.md  2026-02-18-reconnection-plan.md  2026-02-19-osc133-design.md  2026-02-19-output-throttle-plan.md  2026-02-23-llm-completion-design.md  2026-02-24-module-documentation.md  2026-02-24-real-time-cwd-tracking.md  2026-02-27-disk-cleanup-design.md  2026-02-27-disk-cleanup-plan.md  2026-02-27-shell-info-polling-plan.md  2026-02-28-security-design.md  2026-02-28-security-plan.md  2026-03-03-completion-sampling-design.md  2026-03-03-completion-sampling-impl.md  2026-03-03-omnish-design.md  2026-03-06-chat-mode-arrow-history.md  2026-03-07-picker-widget-design.md  2026-03-08-chat-context-redesign-plan.md  2026-03-08-plugin-system-design.md  2026-03-09-line-editor-widget-design.md  2026-03-09-line-editor-widget-plan.md  2026-03-10-client-side-plugin-design.md  2026-03-10-plugin-binary-design.md  2026-03-11-transparent-update-design.md  2026-03-11-transparent-update-plan.md  2026-03-12-plugin-refactor-design.md  2026-03-12-plugin-refactor-plan.md  2026-03-17-install-script.md  claude_context_analysis.md  context-engine-plugin-design.md  langfuse_analysis.md
plugins/web_fetch/: tool.json  web_fetch  web_fetch_formatter
plugins/web_search/: setup.json  tool.json  web_search  web_search_formatter
scripts/: build-local.sh  build-tar.sh  deploy.sh  update.sh
tools/: count_rust_lines.py  dump-daemon-stacks.sh  find_duplicates.py  list_omnish_processes.sh  list_omnish_processes_macos.sh  scan_ci_failures.sh
tools/go_survey_tool/: .gitignore  Makefile  README.md  go.mod
tools/integration_tests/: README.md  lib.sh  prepare_threads.sh  test_basic.sh  test_capture.sh  test_chat_history.sh  test_chat_interrupt.sh  test_config_after_interrupt.sh  test_config_backend.sh  test_config_push.sh  test_disconnect.sh  test_erase_lines.sh  test_i18n_config.sh  test_interrupt_resume.sh  test_menu.sh  test_plugin_cwd.sh  test_sandbox_rules.sh  test_spinner.sh  test_thread_command.sh  test_thread_sandbox.sh  test_tool_display.sh  verify_issue_127.sh  verify_issue_144.sh  verify_issue_147.sh  verify_issue_149.sh  verify_issue_180.sh  verify_issue_184.sh  verify_issue_286.sh  verify_issue_288.sh  verify_issue_337.sh  verify_issue_342.sh  verify_issue_354.sh  verify_issue_469.sh  verify_issue_629.sh  verify_issue_635.sh  verify_picker_selection.sh  verify_resume_shortcut.sh  verify_scroll_view.sh
(+132 files in other folders)
