[workspace]
resolver = "2"
members = [
    "crates/omnish-common",
    "crates/omnish-protocol",
    "crates/omnish-transport",
    "crates/omnish-pty",
    "crates/omnish-store",
    "crates/omnish-context",
    "crates/omnish-llm",
    "crates/omnish-tracker",
    "crates/omnish-daemon",
    "crates/omnish-client",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
nix = { version = "0.29", features = ["term", "signal", "process", "fs", "hostname"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
