[workspace]
resolver = "2"
members = [
    "crates/omnish-common",
    "crates/omnish-protocol",
    "crates/omnish-transport",
    "crates/omnish-pty",
    "crates/omnish-store",
    "crates/omnish-context",
    "crates/omnish-llm",
    "crates/omnish-tracker",
    "crates/omnish-daemon",
    "crates/omnish-client",
    "crates/omnish-plugin",
]

[workspace.package]
version = "0.5.5"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
nix = { version = "0.29", features = ["term", "signal", "process", "fs", "hostname"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = false
lto = false
