[package]
name = "omnish-client"
version = "0.1.0"
edition = "2021"

[dependencies]
omnish-common = { path = "../omnish-common" }
omnish-protocol = { path = "../omnish-protocol" }
omnish-transport = { path = "../omnish-transport" }
omnish-pty = { path = "../omnish-pty" }
omnish-tracker = { path = "../omnish-tracker" }
omnish-store = { path = "../omnish-store" }
omnish-llm = { path = "../omnish-llm" }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
nix = { workspace = true }
libc = "0.2"
unicode-width = "0.2"

[dev-dependencies]
vt100 = "0.15"
