[package]
name = "omnish-client"
version.workspace = true
edition = "2021"

[[bin]]
name = "omnish"
path = "src/main.rs"

[dependencies]
omnish-common = { path = "../omnish-common" }
omnish-protocol = { path = "../omnish-protocol" }
omnish-transport = { path = "../omnish-transport" }
omnish-pty = { path = "../omnish-pty" }
omnish-tracker = { path = "../omnish-tracker" }
omnish-store = { path = "../omnish-store" }
omnish-llm = { path = "../omnish-llm" }
omnish-plugin = { path = "../omnish-plugin" }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
nix = { workspace = true }
dirs = "5"
libc = "0.2"
unicode-width = "0.2"
serde = { workspace = true }
pulldown-cmark = { version = "0.13", default-features = false }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fs2 = "0.4"
toml_edit = "0.22"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
vt100 = "0.16"

[dev-dependencies]
regex-lite = "0.1"
tempfile = "3"
