[package]
name = "omnish-common"
version.workspace = true
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
toml_edit = "0.22"
anyhow = { workspace = true }
tracing = { workspace = true }
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
dirs = "5"
rand = "0.8"
hex = "0.4"
fs2 = "0.4"

[dev-dependencies]
toml = { workspace = true }
tempfile = "3"
