[package]
name = "omnish-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
omnish-common = { path = "../omnish-common" }
omnish-protocol = { path = "../omnish-protocol" }
omnish-transport = { path = "../omnish-transport" }
omnish-store = { path = "../omnish-store" }
omnish-llm = { path = "../omnish-llm" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = "5"
regex = "1"
serde_json = "1"

[[bin]]
name = "omnish-commands"
path = "src/bin/commands.rs"

[dev-dependencies]
tempfile = "3"
