[package]
name = "omnish-daemon"
version.workspace = true
edition = "2021"
default-run = "omnish-daemon"

[dependencies]
omnish-common = { path = "../omnish-common" }
omnish-protocol = { path = "../omnish-protocol" }
omnish-transport = { path = "../omnish-transport" }
omnish-store = { path = "../omnish-store" }
omnish-llm = { path = "../omnish-llm" }
omnish-context = { path = "../omnish-context" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = "5"
serde = { workspace = true }
serde_json = "1"

[[bin]]
name = "omnish-commands"
path = "src/bin/commands.rs"

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
