[package]
name = "omnish-daemon"
version.workspace = true
edition = "2021"
default-run = "omnish-daemon"

[dependencies]
omnish-common = { path = "../omnish-common" }
omnish-protocol = { path = "../omnish-protocol" }
omnish-transport = { path = "../omnish-transport" }
omnish-store = { path = "../omnish-store" }
omnish-llm = { path = "../omnish-llm" }
omnish-context = { path = "../omnish-context" }
omnish-plugin = { path = "../omnish-plugin" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
dirs = "5"
serde = { workspace = true }
serde_json = "1"
regex = "1"
tokio-cron-scheduler = "0.13"
uuid = { workspace = true }
toml = "0.8"
sha2 = "0.10"
reqwest = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["term", "signal", "process", "fs", "hostname", "inotify"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
nix = { workspace = true }


[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
