[package]
name = "omnish-plugin"
version.workspace = true
edition = "2021"

[lib]
name = "omnish_plugin"
path = "src/lib.rs"

[[bin]]
name = "omnish-plugin"
path = "src/main.rs"

[dependencies]
omnish-common = { path = "../omnish-common" }
omnish-llm = { path = "../omnish-llm" }
serde = { workspace = true }
serde_json = "1"
landlock = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
