[package]
name = "omnish-plugin"
version.workspace = true
edition = "2021"

[lib]
name = "omnish_plugin"
path = "src/lib.rs"

[[bin]]
name = "omnish-plugin"
path = "src/main.rs"

[dependencies]
glob = "0.3"
omnish-common = { path = "../omnish-common" }
omnish-llm = { path = "../omnish-llm" }
serde = { workspace = true }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tempfile = "3"
