[package]
name = "omnish-transport"
version.workspace = true
edition = "2021"

[dependencies]
omnish-protocol = { path = "../omnish-protocol" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["socket", "user"] }

[dev-dependencies]
tempfile = "3"
