[package]
name = "omnish-transport"
version.workspace = true
edition = "2021"

[dependencies]
omnish-protocol = { path = "../omnish-protocol" }
omnish-common = { path = "../omnish-common" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = "2"
rcgen = "0.13"
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["socket", "user", "resource"] }

[dev-dependencies]
tempfile = "3"
